# spreadsheet-safety-check

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  SETUP.md  create_test_file.py  macro-checker.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: README.md  create_test_files.py  test_spreadsheet.ods  test_spreadsheet.xlsx  test_spreadsheet_sanitized_20251113_212757.xlsx
src/spreadsheet_safety_check/: __init__.py  checker.py  cli.py
tests/: __init__.py  conftest.py  test_checker.py  test_cli.py
